--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
         "type": "git",
         "url": "https://github.com/zone117x/node-multi-hashing.git"
     },
-    "dependencies" : {
-        "bindings" : "*"
+    "dependencies": {
+        "bindings": "^1.3.0",
+        "nan": "^2.6.2"
     },
     "keywords": [
         "scrypt",
